# ppg-embedded

./: .clang-tidy  .cppcheck-suppressions  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_all.sh
.github/workflows/: ci.yml  pages.yml
ci/: baseline_method_comparison.json  baseline_respiration.json
data/: README.md
data/bidmc_cache/: NOTICE
data/dalia_cache/: NOTICE
data/dalia_cache/extracts/: S1.npz  S6.npz
data/troika_cache/: NOTICE
docs/: index.html  qformat_proof.md
firmware/: Makefile  dsp_cnn.c  dsp_cnn.h  dsp_fft.c  dsp_fft.h  dsp_fixed.c  dsp_fixed.h  dsp_resp.c  dsp_resp.h  host_fft_test.c  host_test.c  lm3s6965.ld  main.c  main_fft.c  main_rr.c  main_sqi.c  run_qemu.sh  semihost.h  startup.c  test_dsp_fft.c  test_dsp_fixed.c
results/: README.md  bidmc.csv  coverage.md  footprint.md  method_comparison.csv  method_comparison.md  metrics.json  respiration.csv  sqi_comparison.json  sqi_comparison.md  window_sweep.csv
results/web/: README.md
scripts/: check_regression.py  fetch_dalia.py  fetch_troika.py  make_dalia_extracts.py
src/: _anim_helpers.py  _firmware_io.py  _respiration_three_channel_draft.py  batch_validate.py  bootstrap.py  compare_methods.py  footprint.py  load_dalia.py  load_troika.py  make_fft_anim.py  make_peak_anim.py  make_rr_anim.py  make_sqi_anim.py  qformat_proof.py  reference.py  respiration.py  sqi.py  sqi_cnn.py  sqi_compare.py  validate.py  validate_rr.py  verify_cnn.py  verify_fft.py  window_sweep.py
